kafka off, pass up

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,61 +4,61 @@ services:
     image: postgres:15.0-alpine
     container_name: book-dbs
     ports: [ "5432:5432" ]
-    env_file: [ local_env/.env ]
+    env_file: [ account/.env ]
     volumes:
       - ./volumes/postgres:/var/lib/postgresql/data
       - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql
     restart: unless-stopped
 
     # Kafka
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    container_name: book-kafka-zookeeper
-    platform: linux/x86_64
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports: [ "22181:2181" ]
-    restart: unless-stopped
-
-  kafka:
-    image: confluentinc/cp-kafka:latest
-    container_name: book-kafka
-    platform: linux/x86_64
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    depends_on: [ zookeeper ]
-    ports: [ "29092:29092" ]
-    restart: unless-stopped
-
-  kafka-ui:
-    image: provectuslabs/kafka-ui:latest
-    container_name: book-kafka-ui
-    platform: linux/x86_64
-    environment:
-      - KAFKA_CLUSTERS_0_NAME=local
-      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
-      - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
-    depends_on: [ zookeeper, kafka ]
-    ports: [ "29093:8080" ]
-    restart: unless-stopped
+#  zookeeper:
+#    image: confluentinc/cp-zookeeper:latest
+#    container_name: book-kafka-zookeeper
+#    platform: linux/x86_64
+#    environment:
+#      ZOOKEEPER_CLIENT_PORT: 2181
+#      ZOOKEEPER_TICK_TIME: 2000
+#    ports: [ "22181:2181" ]
+#    restart: unless-stopped
+#
+#  kafka:
+#    image: confluentinc/cp-kafka:latest
+#    container_name: book-kafka
+#    platform: linux/x86_64
+#    environment:
+#      KAFKA_BROKER_ID: 1
+#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+#      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+#      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+#    depends_on: [ zookeeper ]
+#    ports: [ "29092:29092" ]
+#    restart: unless-stopped
+#
+#  kafka-ui:
+#    image: provectuslabs/kafka-ui:latest
+#    container_name: book-kafka-ui
+#    platform: linux/x86_64
+#    environment:
+#      - KAFKA_CLUSTERS_0_NAME=local
+#      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
+#      - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
+#    depends_on: [ zookeeper, kafka ]
+#    ports: [ "29093:8080" ]
+#    restart: unless-stopped
 
   # Redis
   redis:
     container_name: book-redis
     platform: linux/x86_64
     image: docker.io/bitnami/redis:7.0
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    command: redis-server --requirepass password
     ports:
       - 6379:6379
     networks:
       - redis-network
-    env_file: [ local_env/.env ]
+    env_file: [ auth/.env ]
 
   redis-commander:
     container_name: book-redis-commander
@@ -69,11 +69,11 @@ services:
       REDIS_HOSTS: redis
       REDIS_HOST: redis
       REDIS_PORT: redis:6379
-      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      REDIS_PASSWORD: password
     ports: [ "29094:8081" ]
     networks:
       - redis-network
-    env_file: [ local_env/.env ]
+    env_file: [ auth/.env ]
 
 volumes:
   redis_data:
