--- a/account/.env
+++ b/account/.env
@@ -16,7 +16,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=account-db
 DB_USERNAME=postgres
-DB_PASSWORD=password
+DB_PASSWORD=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST_AUTH_METHOD=trust
 DB_LOGGING=false
